--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate-types": "supabase gen types typescript --project-id ycduwzjkhmwmwmohvdrw > src/lib/supabase/database.types.ts"
   },
   "dependencies": {
     "@ai-sdk/openai": "^0.0.33",
@@ -14,6 +15,8 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/supabase-js": "^2.44.2",
     "@t3-oss/env-core": "^0.10.1",
     "@t3-oss/env-nextjs": "^0.10.1",
     "ai": "^3.2.8",
@@ -40,6 +43,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
+    "supabase": "^1.178.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
