--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "debug": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "generate-types": "supabase gen types typescript --project-id ycduwzjkhmwmwmohvdrw > src/lib/supabase/database.types.ts"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^0.0.33",
-    "@airbend3r/client": "^0.1.3",
+    "@ai-sdk/openai": "^0.0.54",
+    "@airbend3r/client": "0.1.4",
     "@hookform/resolvers": "^3.6.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -19,7 +20,7 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
-    "@supabase/supabase-js": "^2.44.2",
+    "@supabase/supabase-js": "^2.45.2",
     "@t3-oss/env-core": "^0.10.1",
     "@t3-oss/env-nextjs": "^0.10.1",
     "ai": "^3.2.8",
